// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocsTransformer - API writes export entry for React component 1`] = `
Object {
  "exports": Object {
    "App1": Object {
      "description": null,
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:App1/,
      "name": "App1",
      "props": null,
      "type": "component",
      "typeParameters": Array [],
    },
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for localName React component 1`] = `
Object {
  "exports": Object {
    "AppReal": Object {
      "description": null,
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:App2/,
      "name": "App2",
      "props": null,
      "type": "component",
      "typeParameters": Array [],
    },
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for referenced function 1`] = `
Object {
  "exports": Object {
    "d": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for referenced string 1`] = `
Object {
  "exports": Object {
    "c": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for static number 1`] = `
Object {
  "exports": Object {
    "a": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for static string 1`] = `
Object {
  "exports": Object {
    "b": Object {},
  },
  "links": Object {},
}
`;
